--- a/config.yml
+++ b/config.yml
@@ -1,245 +1,106 @@
-baseURL: "https://qiurunwen.github.io/"
-title: "Runwen Qiu"
-paginate: 5
-theme: hugo-PaperMod
-
-enableInlineShortcodes: true
-enableRobotsTXT: true
-buildDrafts: false
-buildFuture: false
-buildExpired: false
-enableEmoji: true
-pygmentsUseClasses: true
-# googleAnalytics: UA-123-45
-
-minify:
-    disableXML: true
-    # minifyOutput: true
-
-languages:
-    en:
-        languageName: "English"
-        weight: 1
-        taxonomies:
-          category: categories
-          tag: tags
-          series: series
-        menu:
-            main:
-                - name: Archive
-                  url: archives
-                  weight: 5
-                - name: Search
-                  url: search/
-                  weight: 10
-                - name: Tags
-                  url: tags/
-                  weight: 10
-                # - name: WiKi
-                #   url: https://github.com/adityatelange/hugo-PaperMod/wiki/
-                # - name: Discord
-                #   url: https://discord.gg/ahpmTvhVmp
-
-    zh:
-        languageName: "简体中文"
-        weight: 2
-        taxonomies:
-          category: categories
-          tag: tags
-          series: series
-        menu:
-            main:
-                - name: 归档
-                  url: archives
-                  weight: 5
-                - name: 搜索
-                  url: search/
-                  weight: 10
-                - name: 标签
-                  url: tags/
-                  weight: 10
-
-    # fr:
-    #     languageName: ":fr:"
-    #     languageAltTitle: French
-    #     weight: 2
-    #     title: PaperModL2
-    #     taxonomies:
-    #       category: FRcategories
-    #       tag: FRtags
-    #       series: FRseries
-    #     profileMode:
-    #         enabled: true
-    #         title: PaperMod
-    #         imageUrl: "https://raw.githubusercontent.com/twitter/twemoji/master/assets/svg/1f317.svg"
-    #         imageTitle: ProfileMode image
-    #         # imageWidth: 120
-    #         # imageHeight: 120
-    #         subtitle: "☄️ Fast | ☁️ Fluent | 🌙 Smooth | 📱 Responsive"
-    #         buttons:
-    #             - name: Blog
-    #               url: posts
-    #             - name: Profile Mode
-    #               url: https://github.com/adityatelange/hugo-PaperMod/wiki/Features#profile-mode
-    #     menu:
-    #         main:
-    #             - name: Archive
-    #               url: archives/
-    #               weight: 5
-    #             - name: FRTags
-    #               url: frtags
-    #               weight: 10
-    #             - name: FRCategories
-    #               url: frcategories
-    #               weight: 10
-    #             - name: FRSeries
-    #               url: frseries
-    #               weight: 10
-    #             - name: NullLink
-    #               url: "#"
-
-    # fa:
-    #     languagedirection: rtl
-    #     weight: 3
-    #     title: PaperMod RTL
-    #     homeInfoParams:
-    #         Title: "Hi there \U0001F44B"
-    #         Content: Welcome to RTL layout
-    #     taxonomies:
-    #       category: FAcategories
-    #       tag: FAtags
-    #       series: FAseries
-    #     menu:
-    #         main:
-    #             - name: FATags
-    #               url: fatags
-    #               weight: 10
-
-outputs:
-    home:
-        - HTML
-        - RSS
-        - JSON
-
+baseURL: 'https://qiurunwen.github.io'
+title: RunwenQiu
+theme: hugo-theme-ladder
+license: MIT
+licenselink: 'https://github.com/guangzhengli/hugo-theme-ladder/blob/master/LICENSE'
+description: 'RunwenQiu''s blog'
+homepage: 'https://qiurunwen.github.io'
+defaultContentLanguage: 'en'
+googleAnalytics: G-xxx
+paginate: 10
+menu:
+  main:
+    - name: Blog
+      url: /blog
+      weight: 1
+    - name: Tags
+      url: /tags
+      weight: 2
+    - name: Archive
+      url: /archives
+      weight: 3
+    - name: Guestbook
+      url: /guestbook
+      weight: 4
+    # - name: Dashboard
+    #   url: https://umami-ochre-nu.vercel.app/share/R1lHz7QY/hugo-ladder-exampleSite
+    #   weight: 5
 params:
-    env: production # to enable google analytics, opengraph, twitter-cards and schema.
-    description: "Blog of Qiu - https://qiurunwen.github.io/"
-    author: Runwen Qiu
-    # author: ["Me", "You"] # multiple authors
-
-    defaultTheme: auto
-    # disableThemeToggle: true
-    ShowShareButtons: true
-    ShowReadingTime: true
-    # disableSpecial1stPost: true
-    displayFullLangName: true
-    ShowPostNavLinks: true
-    ShowBreadCrumbs: true
-    ShowCodeCopyButtons: true
-    ShowRssButtonInSectionTermList: true
-    ShowToc: true
-    comments: true
-    images: ["papermod-cover.png"]
-
-    profileMode:
-        enabled: false
-        title: PaperMod
-        imageUrl: "#"
-        imageTitle: my image
-        # imageWidth: 120
-        # imageHeight: 120
-        buttons:
-            - name: Archives
-              url: archives
-            - name: Tags
-              url: tags
-
-    homeInfoParams:
-        Title: "Runwen Qiu"
-        Content: >
-            Welcome to blog of Runwen Qiu.
-
-            - Write some ideas and draft when doing research.
-
-            - Blog is based on theme [Paper](https://github.com/nanxiaobei/hugo-paper).
-
-    socialIcons:
-        - name: github
-          url: "https://github.com/QiuRunwen"
-        - name: KoFi
-          url: "https://github.com/QiuRunwen"
-        - name: Rss
-          url: "index.xml"
-
-    editPost:
-        URL: "https://github.com/adityatelange/hugo-PaperMod/tree/exampleSite/content"
-        Text: "Suggest Changes" # edit text
-        appendFilePath: true # to append file path to Edit link
-
-    # label:
-    #     text: "Home"
-    #     icon: icon.png
-    #     iconHeight: 35
-
-    # analytics:
-    #     google:
-    #         SiteVerificationTag: "XYZabc"
-
-    assets:
-        disableHLJS: false
-    #     favicon: "<link / abs url>"
-    #     favicon16x16: "<link / abs url>"
-    #     favicon32x32: "<link / abs url>"
-    #     apple_touch_icon: "<link / abs url>"
-    #     safari_pinned_tab: "<link / abs url>"
-
-    # cover:
-    #     hidden: true # hide everywhere but not in structured data
-    #     hiddenInList: true # hide on list pages and home
-    #     hiddenInSingle: true # hide on single page
-
-    # fuseOpts:
-    #     isCaseSensitive: false
-    #     shouldSort: true
-    #     location: 0
-    #     distance: 1000
-    #     threshold: 0.4
-    #     minMatchCharLength: 0
-    #     limit: 10 # refer: https://www.fusejs.io/api/methods.html#search
-    #     keys: ["title", "permalink", "summary", "content"]
-
-markup:
-    goldmark:
-        renderer:
-            unsafe: true
-    highlight:
-        noClasses: false
-        # anchorLineNos: true
-        # codeFences: true
-        # guessSyntax: true
-        # lineNos: true
-        # style: monokai
-
-privacy:
-    vimeo:
-        disabled: false
-        simple: true
-
-    twitter:
-        disabled: false
-        enableDNT: true
-        simple: true
-
-    instagram:
-        disabled: false
-        simple: true
-
-    youtube:
-        disabled: false
-        privacyEnhanced: true
-
-services:
-    instagram:
-        disableInlineCSS: true
-    twitter:
-        disableInlineCSS: true
+  brand: HOME
+  avatarURL: /images/avatar.png
+  author: RunwenQiu
+  authorDescription: A researcher who goes to bed and wakes up early.
+  info: Learning, thinking, and writing.
+  favicon: /images/avatar.png
+  options:
+    showDarkMode: true
+    enableImgZooming: true
+    enableMultiLang: true
+    showMetaTags: true
+  darkModeTheme: data-dark-mode
+  #darkModeTheme: icy-dark-mode
+  comments:
+    giscus:
+      enable: true
+      repo: QiuRunwen/qiurunwen.github.io
+      repo_id: R_kgDOKw6ltQ
+      category: Announcements
+      category_id: DIC_kwDOKw6ltc4CbL2U
+      mapping: pathname
+      position: top
+      lang: en # pick a language from https://github.com/giscus/giscus/tree/main/locales
+    utteranc:
+      enable: false
+      repo: username/reponame
+      issueTerm: pathname
+  analytics:
+    google:
+      SiteVerificationTag: xxx
+    umami:
+      enable: true
+      website_id: f8de9091-4edf-4da1-927c-2124c61fe85b
+      url: https://qiurunwengithubio-h8dh5tqpr-rs-projects-f56ae4e5.vercel.app/script.js
+  guestbook:
+    title: Guestbook
+    description: Leave a comment below. It could be anything –- question, appreciation, information, or even humor.
+  social:
+    - name: GitHub
+      pre: >-
+        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-github"><path d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22"></path></svg>
+      url: 'https://qiurunwen.github.io'
+    - name: Dashboard
+      pre: >-
+        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-box"><path d="M21 16V8a2 2 0 0 0-1-1.73l-7-4a2 2 0 0 0-2 0l-7 4A2 2 0 0 0 3 8v8a2 2 0 0 0 1 1.73l7 4a2 2 0 0 0 2 0l7-4A2 2 0 0 0 21 16z"></path><polyline points="3.27 6.96 12 12.01 20.73 6.96"></polyline><line x1="12" y1="22.08" x2="12" y2="12"></line></svg>
+      url: 'https://qiurunwengithubio-h8dh5tqpr-rs-projects-f56ae4e5.vercel.app/share/KNRjTh0zFGrzuGsT/qiurunwen.github.io'
+languages:
+  en:
+    languageName: EN
+  zh:
+    languageName: 中
+    author: RunwenQiu
+    menu:
+      main:
+        - name: 文章
+          url: /blog
+          weight: 1
+        - name: 分类
+          url: /tags
+          weight: 2
+        - name: 历史文章
+          url: /archives
+          weight: 3
+        - name: 留言板
+          url: /guestbook
+          weight: 4
+        # - name: 网站统计
+        #   url: https://umami-ochre-nu.vercel.app/share/R1lHz7QY/hugo-ladder-exampleSite
+        #   weight: 5
+    params:
+      authorDescription: 一个早睡早起的研究僧
+      info: 多学，多思，多写
+      guestbook:
+        title: 留言板
+        description: 您的评论，会让该网站更精彩！
+taxonomies:
+  series: series
+  tag: tags
